0.85_01
    New Features
    * cmp_ok() now displays the error if the comparison throws one.
      For example, broken overloaded objects.

    Bug Fixes
    * cmp_ok() no longer stringifies or numifies its arguments before comparing.
      This makes cmp_ok() properly test overloaded ops.
      [rt.cpan.org 24186] [code.google.com 16]
    * diag() properly escapes blank lines.


0.84  Wed Oct 15 09:06:12 EDT 2008
    Other
    * 0.82 accidentally shipped with experimental Mouse dependency.


0.82  Tue Oct 14 23:06:56 EDT 2008
    Bug Fixes
    - 0.81_01 broke $TODO such that $TODO = '' was considered todo.


0.81_02  Tue Sep  9 04:35:40 PDT 2008
    New Features
    * Test::Builder->reset_outputs() to reset all the output methods back to
      their defaults.

    Bug Fixes
    - Fixed the file and line number reported by like when it gets a bad
      regex.

    Features Changed
    - Now preserves the tests' exit code if it exits abnormally, rather than
      setting it to 255.
    - Changed the "Looks like your test died" message to
      "Looks like your test exited with $exit_code"
    - no_plan now only warns if given an argument.  There were a lot of people
      doing that, and it's a sensible mistake.  [test-more.googlecode.com 13]


0.81_01  Sat Sep  6 15:13:50 PDT 2008
    New Features
    * Adam Kennedy bribed me to add new_ok().  The price was one DEFCON license key.
      [rt.cpan.org 8891]
    * TODO tests can now start and end with 'todo_start' and 'todo_end'
      Test::Builder methods. [rt.cpan.org 38018]
    * Added Test::Builder->in_todo() for a safe way to check if a test is inside a
      TODO block.  This allows TODO tests with no reason.
    * Added note() and explain() to both Test::More and Test::Builder.
      [rt.cpan.org 14764] [test-more.googlecode.com 3]

    Features Changed
    * Changed the message for extra tests run to show the number of tests run rather than
      the number extra to avoid the user having to do mental math.